--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.5.1",
+    "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "eslint-plugin-unused-imports": "^2.0.0",
     "lodash": "^4.17.21",
