--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "i18next": "^23.4.4",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.1.2",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
